# virtual_camera

./: .gitmodules  CMakeLists.txt  README.md
dependencies/glad/: glad.c  glad.h
shaders/: fragment copy.glsl  fragment.glsl  fragmentOrange.glsl  fragmentYellow.glsl  fragmentlight.glsl  vertex copy.glsl  vertex.glsl
src/: App.h  Camera.h  Cube.h  Light.h  LightManager.h  Material.h  Mesh.h  Object.h  Renderer.h  Scene.h  Shader.h  Tetrahedron.h  config.h  main.cpp
src/Shapes/: Cube.h  Object.h  Sphere.h  Tetrahedron.h
